# caltech_datascience_course

./: Untitled.ipynb
Applied_DS_with_Py/assignments/: Sales_Analysis.ipynb
Programming_Refreshers/assignments/: .flake8  .gitignore  README.md  main.py  pyproject.toml
Programming_Refreshers/assignments/backend/: app.py  entity.py  settings.py  types.py
Programming_Refreshers/assignments/backend/db/: base.py  establish_db.py  pydantic_column_type.py
Programming_Refreshers/assignments/backend/db/curd/: course.py  enrollment.py  instructor.py  user.py
Programming_Refreshers/assignments/backend/db/orm/: __init__.py  course.py  enrollment.py  instructor.py  lerner.py  user.py
