[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Rahul Das(rahul.das05) <rahul.das05@edgeverve.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.31"
termcolor = "^2.4.0"
pydantic = "^2.8.2"
pydantic-settings = "^2.3.4"
sqlalchemy-utils = "^0.41.2"
pwinput = "^1.0.3"


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = [
    ".ruff_cache",
    ".git",
    ".ipynb_checkpoints",
    ".ruff_cache",
    ".venv",
    ".vscode",
]
extend-include = ["*.ipynb"]
line-length = 120
indent-width = 4
target-version = "py39"

[tool.ruff.lint]
ignore = []
fixable = ["ALL"]


[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"
